2011-10-11  Abhishek Arya  <inferno@chromium.org>

        Generalize r95461 change to include table-cell and 
        allow splitting between :before, :after content.
        https://bugs.webkit.org/show_bug.cgi?id=69854

        Reviewed by Eric Seidel.

        Test: fast/table/table-row-before-after-content-around-table-cell.html

        * rendering/RenderObject.cpp:
        (WebCore::RenderObject::addChild):

2011-10-11  Dominic Mazzoni  <dmazzoni@google.com>

        AccessibilityMenuList should fire change notification when popup is not open.
        https://bugs.webkit.org/show_bug.cgi?id=69440

        Reviewed by Chris Fleizach.

        Test: accessibility/menu-list-sends-change-notification.html

        * accessibility/AccessibilityMenuList.cpp:
        (WebCore::AccessibilityMenuList::didUpdateActiveOption):

2011-10-11  Joshua Bell  <jsbell@chromium.org>

        IndexedDB: implement IDBFactory.cmp method
        https://bugs.webkit.org/show_bug.cgi?id=62293

        Reviewed by Tony Chang.

        * storage/IDBFactory.cpp:
        (WebCore::IDBFactory::cmp):
        * storage/IDBFactory.h:
        * storage/IDBFactory.idl:
        * storage/IDBKey.cpp:
        (WebCore::IDBKey::compare):
        (WebCore::IDBKey::isLessThan):
        (WebCore::IDBKey::isEqual):
        * storage/IDBKey.h:

2011-10-11  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Texmap] TextureMapperGL leaves GL in a modified state.
        https://bugs.webkit.org/show_bug.cgi?id=68983

        Reviewed by Andreas Kling.

        Disable the vertexAttribArray after clipping.

        No new functionality so no new tests.

        * platform/graphics/opengl/TextureMapperGL.cpp:
        (WebCore::TextureMapperGL::beginClip):

2011-10-11  No'am Rosenthal  <noam.rosenthal@nokia.com>

        [Qt][WK2] Synchronize tiling with accelerated compositing
        https://bugs.webkit.org/show_bug.cgi?id=69151

        Reviewed by Kenneth Rohde Christiansen.
